[package]
name = "ttrchive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.2.7", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.0"
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["brotli", "json"] }
tetr_ch = "0.4.0"
tokio = { version = "1.28.1", features = ["full"] }
