[package]
name = "ttrchive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.0"
futures = "0.3.28"
itertools = "0.11.0"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["brotli", "json"] }
tetr_ch = "0.4.0"
tokio = { version = "1.33.0", features = ["full"] }
